# Solitaire

./: CMakeLists.txt  Card.h  CardStash.h  ConsoleColors.h  FoundationPile.h  Input.h  InputBox.h  LICENSE  Logger.h  Menu.h  README.md  Renderable.h  ScoreManager.h  ScreenBuffer.h  Selector.h  SolitaireGame.h  TableauPile.h  Text.h  main.cpp
